--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,8 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# discord API key file
+key.conf
+
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
