--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,11 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# discord API key file
+# Discord API key file
 key.conf
+
+# Progress diagram upload
+*.png
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
